<resources>
    <string name="app_name">BoardwalkApplication</string>
    <string name="title_activity_menu_item">menuItem</string>
    <string name="wrap_text">Signature Crunchy Tuna</string>
    <string name="deli">Smoked Salmon</string>
    <string name="wraps_burgers">Wraps and Burgers</string>
    <string name="beverages">Beverages</string>
    <string name="jaDish">Jamaican Dish</string>
    <string name="grilled">Grilled Chicken Sandwich</string>
    <string name="turkey">Turkey Sandwich</string>
    <string name="Name">Signature Crunchy Tuna</string>
    <string name="Descr">Flaked Tuna, raisins and carrots in the perfect filling for your tuna</string>
    <string name="cost">$400</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_milkshake">Milkshake</string>
</resources>
