<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@drawable/bg"
    android:scrollbars="vertical"
    android:visibility="visible">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="364dp"
        android:layout_height="2dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="28dp"
        android:background="@android:color/background_light"
        android:text="TextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/turkey" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="364dp"
        android:layout_height="2dp"
        android:layout_marginBottom="28dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="26dp"
        android:background="@android:color/background_light"
        android:text="TextView"
        app:layout_constraintBottom_toTopOf="@+id/turkey"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/grilled"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="364dp"
        android:layout_height="2dp"
        android:layout_marginBottom="22dp"
        android:layout_marginStart="8dp"
        android:background="@android:color/background_light"
        android:text="TextView"
        app:layout_constraintBottom_toTopOf="@+id/grilled"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="364dp"
        android:layout_height="2dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/background_light"
        android:text="TextView"
        app:layout_constraintBottom_toTopOf="@+id/wrap"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <Button
        android:id="@+id/wrap"
        style="@android:style/Widget.Holo.Light.Button.Inset"
        android:layout_width="261dp"
        android:layout_height="37dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="128dp"
        android:background="@android:color/holo_green_light"
        android:fontFamily="cursive"
        android:onClick="Signature"
        android:text="@string/wrap_text"
        android:textAlignment="center"
        android:textColor="?attr/colorBackgroundFloating"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:clickable="true"
        app:backgroundTint="@android:color/holo_orange_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_input_add" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="368dp"
        android:layout_height="52dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/background_light"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/wraps_burgers"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/holo_green_light"
            android:fontFamily="sans-serif-condensed"
            android:onClick="show_item_info"
            android:text="@string/wraps_burgers"
            android:textColor="@android:color/background_light"
            android:textSize="14sp" />

        <TextView
            android:layout_width="64dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/holo_orange_light" />

        <Button
            android:id="@+id/beverages"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="119dp"
            android:layout_height="52dp"
            android:layout_weight="1"
            android:background="@android:color/holo_green_light"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/beverages"
            android:textColor="@android:color/background_light"
            android:textSize="14sp" />

    </LinearLayout>

    <Button
        android:id="@+id/grilled"
        android:layout_width="261dp"
        android:layout_height="37dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="220dp"
        android:background="@android:color/holo_green_light"
        android:fontFamily="cursive"
        android:onClick="Chicken"
        android:text="@string/grilled"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/turkey"
        android:layout_width="261dp"
        android:layout_height="37dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="60dp"
        android:background="@android:color/holo_green_light"
        android:fontFamily="cursive"
        android:onClick="Turkey"
        android:text="@string/turkey"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/grilled" />

</android.support.constraint.ConstraintLayout>
